@@ -1837,7 +1837,9 @@ int Actor::inventory_shapenum()
 	// We are serpent if we can use serpent isle paperdolls
 	bool serpent = Game::get_game_type()==SERPENT_ISLE||(gwin->can_use_paperdolls() && gwin->get_bg_paperdolls());
 	
-	if (!npc_num && !serpent)	// Avatar No paperdolls
+	if (!npc_num && !serpent && get_type_flag(tf_sex))	// Avatar No paperdolls (female)
+		return (ACTOR_FIRST_GUMP+1);
+	else if (!npc_num && !serpent)	// Avatar No paperdolls
 		return (ACTOR_FIRST_GUMP);
 	else if (!npc_num && serpent)	// Avatar Paperdolls
 		return (123);
@@ -2478,8 +2480,10 @@ bool Actor::add
 
 	if (type == FIS_2Hand)		// Two-handed?
 		two_handed = true;
-	if (type == FIS_2Finger)	// Gloves?
+	if (type == FIS_2Finger) {	// Gloves?
 		index = lfinger;
+		two_fingered = true;
+	}
 
 	spots[index] = obj;		// Store in correct spot.
 	if (index == lhand && schedule)
